@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="1.6.6" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="1.6.7" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.25.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -45,6 +45,9 @@
 			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
 		<news>
+Changelog 1.6.7:
+Fix season sort due to stringed season number from TMDb module
+
 Changelog 1.6.6:
 Fix Fanart.tv call for movies
 
