@@ -1,3 +1,6 @@
+Changelog 1.6.7:
+Fix season sort due to stringed season number from TMDb module
+
 Changelog 1.6.6:
 Fix Fanart.tv call for movies
 
